@@ -9,6 +9,7 @@ REQUIREMENTS
 * php.ini options:
    - error_reporting E_ALL & ~E_NOTICE (or lower)
    - file_uploads on (for attachment upload features)
+   - memory_limit (increase as suitable to support large attachments)
 * A MySQL or PostgreSQL database engine or the SQLite extension for PHP
 * A database with permission to create tables
 
